# firehose-tap-salesloft

./: .gitignore  README.md  environment.yml  meltano.yml  pyproject.toml
tap_salesloft/: __init__.py  client.py  tap.py
tap_salesloft/streams/: __init__.py  account_stages.py  account_team_member_roles.py  account_tiers.py  account_types.py  accounts.py  actions.py  activity_histories.py  audit_reports.py  cadence_memberships.py  cadences.py  calendar_events.py  call_data_records.py  call_dispositions.py  call_instructions.py  call_sentiments.py  calls.py  crm_account_team_members.py  crm_activites.py  crm_activity_fields.py  crm_team_members_with_roles.py  crm_users.py  custom_fields.py  custom_roles.py  email_template_attachments.py  email_templates.py  emails.py  external_configurations.py  external_mappings.py  groups.py  imports.py  meetings.py  notes.py  opportunities.py  opportunity_people.py  opportunity_stages.py  pending_emails.py  people.py  person_stages.py  phone_number_assignments.py  (+12 more)
